--- a/style.css
+++ b/style.css
@@ -10,13 +10,6 @@ h1 {
     margin-bottom: 20px;
 }
 
-.loading-spinner {
-    width: 100%;
-}
-
-.hidden {
-    display: none;
-}
 
 .show-previous {
     text-align: center;
@@ -59,21 +52,56 @@ ul.menu {
     transition: all .3s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
+.list-group-item {
+    list-style: none;
+}
+
 ul.menu.menu--show {
     left: 0;
 }
 
 ul.menu > li {
     padding: 20px;
-    list-style: none;;
+    list-style: none;
 }
 ul.menu > li:hover {
     background-color: #666;
     cursor: pointer;
 }
+
 .fa-times{
     color:white;
 }
 .fa-times:hover{
 color: black;
+}
+
+
+.loader {
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loader > img {
+    width: 100px;
+}
+
+.loader.hidden {
+    animation: fadeOut 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut {
+    100% {
+        opacity: 0;
+        visibility: hidden;
+    }
 }
